@@ -78,6 +78,7 @@ t/pod-coverage.t
 t/pod.t
 t/render-upon-init.t
 t/rss2-gt-encoding.t
+t/save-while-in-taint-mode.t
 t/test-generated-items.t
 t/test_manifest
 t/version.t
